resolved issue of HEY alignment. Still need to check it with responsiveness

--- a/src/components/Phone/molecules/Intro/Intro.module.css
+++ b/src/components/Phone/molecules/Intro/Intro.module.css
@@ -1,3 +1,8 @@
+.homePageTextContainer{
+  display: flex;
+  align-items: end;
+}
+
 .rotate{
     animation: loading 8s linear infinite;
    }
