--- a/src/components/atoms/Hey/Hey3.module.css
+++ b/src/components/atoms/Hey/Hey3.module.css
@@ -3,8 +3,12 @@
     src: url("/static/fonts/ntf-grand-bold.otf");
 }
 
+.lolodile{
+    margin: -10px 6px;
+}
+
 .colourChangingText {
-    height: 15vh;
+    line-height: 1;
     width: auto;
     /* Use it when you need it. another way is to use margin auto. */
     /* display: flex;
@@ -15,7 +19,6 @@
     font-size: 120px;
     cursor: pointer;
     letter-spacing: 10px;
-    margin: 0 4px;
     border-radius: 20px;
     color: #FFFFFF;
     text-shadow: 0 0 15px #FFFFFF, 0 0 25px #FFFFFF;
