--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,12 @@
    display: none;
   }
 
+  *{
+    margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+  }
+
 
 
 
